add member method is updated
